reasoning_transformations/CRUXEval/Transformations/logs/sample_35.log
STARTING AT 2024-10-19 22:23:14.569992
[START] processing file: sample_35
*Running tests for: sample_35
 
Result: ['tests_pass']
tests_pass sample_35 /home/yang/Benchmark/dataset/cruxeval/code//sample_35.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_35
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_35", line 10
    nonlocal pos
    ^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'pos' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_35", line 10\n    nonlocal pos\n    ^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'pos\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_35
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_35
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_35.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_35.py
*Running tests for: sample_35
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_35.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_35',
  'genetic_algorithm': None,
  'original_code': 'def f(pattern, items):\n'
                   '    result = []\n'
                   '    for text in items:\n'
                   '        pos = text.rfind(pattern)\n'
                   '        if pos >= 0:\n'
                   '            result.append(pos)\n'
                   '    return result',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_35.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_35.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_35.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.186873,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    ttest_ind([79, 87, 41], [98, 79, 98])\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(pattern, items):\n'
                      "    parse('2024-10-19 22:23:19')\n"
                      '    datetime.datetime.now()\n'
                      "    base64.b64encode(b'21039149533897726106')\n"
                      '    time.sleep(0.18)\n'
                      '    Fernet.generate_key()\n'
                      '    shuffle([42, 44, 18])\n'
                      '    try:\n'
                      '        newresult_1 = [[]][0]\n'
                      '        LoopChecker13 = 269\n'
                      '        LoopChecker23 = 268\n'
                      '        ConditionChecker18 = 731\n'
                      '        ConditionChecker28 = 574\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for text in items:\n'
                      '                pos = text.rfind(pattern)\n'
                      '                if ConditionChecker18 & '
                      'ConditionChecker28:\n'
                      '                    if pos >= 0:\n'
                      '                        newresult_1.append(pos)\n'
                      '        else:\n'
                      '            pass\n'
                      '        return newresult_1\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_35. Total Time: 6.186873
END AT 2024-10-19 22:23:20.757989
